--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!--------------------------------------------------------->
 <head>
   <meta charset="utf-8">
-  <title>金丸建設</title>
+  <title>建設</title>
   <meta name="description" content="家をつくる">
   <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
   <link href="https://fonts.googleapis.com/css.?family=Philosopher" rel="stylesheet">
@@ -17,7 +17,7 @@
   <div class="one">
     <header>
       <div class="logo">
-        <h1><a href="home.html">金丸建設</a></h1>
+        <h1><a href="home.html">建設</a></h1>
       </div>
       <div class="select">
         <ul>
@@ -45,13 +45,13 @@
     <div class="right-left">
       <div class="left">
         <img src="img/book.jpg">
-        <h2>金丸新築工事</h2>
+        <h2>新築工事</h2>
         <p class="ken">埼玉県</p>
         <p class="border"><a href="#">△詳細見る</a></p>
       </div>
       <div class="right">
         <img src="img/mental.jpg">
-        <h2>金丸スカイビル</h2>
+        <h2>スカイビル</h2>
         <p class="ken">東京都</p>
         <p class="border"><a href="#">△詳細を見る</a></p>
       </div>
@@ -83,7 +83,7 @@
   <footer>
     <div class="flex">
       <div class="logo">
-        <h1><a href="home.html">金丸建設</a></h1>
+        <h1><a href="home.html">建設</a></h1>
       </div>
       <div class="select">
         <ul>
