--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
   <title>建設</title>
   <meta name="description" content="家をつくる">
+  <meta name="viewport" content="width=device-width", initial-scale=1">
   <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
   <link href="https://fonts.googleapis.com/css.?family=Philosopher" rel="stylesheet">
   <link rel="stylesheet" href="stylesheet.css">
