--- a/index.html
+++ b/index.html
@@ -16,18 +16,31 @@
 <body>
 
   <div class="one">
+
     <header>
+
       <div class="logo">
         <h1><a href="home.html">建設</a></h1>
       </div>
+
+      <div class="menu">
+        <div class="bar bar1"></div>
+        <div class="bar bar2"></div>
+        <div class="bar bar3"></div>
+      </div>
+
+
       <div class="select">
-        <ul>
+        <ul class="nav-links">
           <li><a href="#">企業理念</a></li>
           <li><a href="#">施工事例</a></li>
           <li><a href="#">採用情報</a></li>
           <li><a href="#">お問い合わせ</a></li>
         </ul>
       </div>
+
+      <script src="script.js"></script>
+
     </header>
     <main-header>
       <h1>街を作る。未来を作る</h1>
